--- a/index.html
+++ b/index.html
@@ -1,49 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <title>Jayant Jain | Software Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jayant Jain | Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+    }
+    .resume {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #ffffff;
+      padding: 40px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #1f2937;
+    }
+    h2 {
+      font-size: 18px;
+      color: #2563eb;
+      border-bottom: 2px solid #e5e7eb;
+      padding-bottom: 4px;
+      margin-top: 30px;
+    }
+    p {
+      font-size: 14px;
+      color: #374151;
+      line-height: 1.6;
+    }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .contact a {
+      text-decoration: none;
+      color: #2563eb;
+      font-size: 14px;
+    }
+    .contact a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 18px;
+      margin: 8px 0;
+    }
+    li {
+      font-size: 14px;
+      color: #374151;
+      margin-bottom: 6px;
+    }
+    .skills span {
+      display: inline-block;
+      background: #e0e7ff;
+      color: #1e3a8a;
+      padding: 6px 10px;
+      margin: 4px;
+      border-radius: 4px;
+      font-size: 13px;
+    }
+    .footer {
+      margin-top: 30px;
+      font-size: 13px;
+      color: #6b7280;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <img src="assets/Jayant-Jain.jpg" alt="Jayant Jain" class="profile-pic">
-    <h1>Jayant Jain</h1>
-    <p class="subtitle">B.Tech CSE | Java | DSA | Python | MERN Stack</p>
 
-    <section>
-      <h2>About Me</h2>
-      <p>I’m a passionate developer currently pursuing B.Tech in Computer Science at Mandsaur University. I specialize in full-stack development and DSA. In the upcoming year, I aim to dive deep into Artificial Intelligence and Machine Learning.</p>
-    </section>
+  <div class="resume">
 
-    <!-- <section>
-      <h2>Projects</h2>
-      <ul>
-        <li><strong>CLAD</strong> – A web app for structured DSA learning.</li>
-        <li><strong>DSA Tracker</strong> – Visual tool for algorithm practice.</li>
-      </ul>
-    </section> -->
+    <!-- Header -->
+    <div class="header">
+      <div>
+        <h1>Jayant Jain</h1>
+        <p><strong>Software Engineer (Fresher) | DSA | Learning AI</strong></p>
+        <p>Mandsaur, Madhya Pradesh, India</p>
+      </div>
+      <div class="contact">
+        <p>Email: <a href="mailto:jayantjain0520052@gmail.com">jayantjain0520052@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/jayantjain052005/" target="_blank">linkedin.com/in/jayantjain052005</a></p>
+        <p>GitHub: <a href="https://github.com/jayantjain052005/jayantjain052005" target="_blank">github.com/jayantjain052005</a></p>
+        <p>LeetCode: <a href="https://leetcode.com/u/jayantjain052005/" target="_blank">leetcode.com/u/jayantjain052005</a></p>
+        <p>Codolio: <a href="https://codolio.com/profile/jayantjain052005" target="_blank">codolio.com/profile/jayantjain052005</a></p>
+      </div>
+    </div>
 
-    <section>
-      <h2>Skills</h2>
-      <p>Java, Python, JavaScript, React, Node.js, MongoDB, HTML, CSS, Git</p>
-    </section>
+    <!-- Summary -->
+    <h2>Professional Summary</h2>
+    <p>
+      Motivated software engineering fresher with strong foundations in Data Structures & Algorithms,
+      problem-solving, and core computer science concepts. Currently learning Artificial Intelligence
+      and eager to grow into backend, mobile, and full-stack roles. Comfortable with remote work and
+      fast-learning environments.
+    </p>
 
-    <section>
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:jayantjain052005@gmail.com">jayantjain052005@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/your-profile">linkedin.com/in/your-profile</a></p>
-    </section>
+    <!-- Education -->
+    <h2>Education</h2>
+    <p><strong>Bachelor of Technology (B.Tech)</strong><br>
+       Mandsaur University, Madhya Pradesh<br>
+       Batch: 2027 | CGPA: 8.0 (Current)
+    </p>
 
-    <section>
-      <h2>Upcoming Learning Goals</h2>
-      <ul>
-        <li>Master core concepts of Artificial Intelligence</li>
-        <li>Build hands-on ML/DL projects using Python</li>
-        <li>Explore AI applications in real-world domains like security and healthcare</li>
-      </ul>
-    </section>
+    <!-- Skills -->
+    <h2>Technical Skills</h2>
+    <div class="skills">
+      <span>Java</span>
+      <span>Python (Basic)</span>
+      <span>Data Structures & Algorithms</span>
+      <span>OOP</span>
+   
+      <span>MySQL (Basic)</span>
+      <span>AI Fundamentals</span>
+    </div>
+
+    <!-- Projects -->
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>DSA Practice Repository</strong> –
+        <a href="https://github.com/jayantjain052005/jayantjain052005" target="_blank">GitHub Link</a><br>
+        Solved and documented multiple DSA problems focusing on clean, optimized solutions.
+      </li>
+    </ul>
+
+    <!-- Certifications -->
+    <h2>Certifications</h2>
+    <ul>
+      <li>
+        <strong>Sigma 5.0 – Data Structures & Algorithms</strong> –
+        <a href="https://raw.githubusercontent.com/jayantjain052005/dsa/main/certificate-sigma-50-672b17223c33c36b830d9022.pdf" target="_blank">
+          View Certificate
+        </a>
+      </li>
+      <li>
+        <strong>Prime AI Course (Ongoing)</strong> – Apna College
+      </li>
+    </ul>
+
+    <!-- Footer -->
+    <div class="footer">
+      Open to Remote / Relocation • Strong Learning Mindset • Available to Join Immediately
+    </div>
+
   </div>
+
 </body>
 </html>
+
